Try another change to the head to see if the zoom in on mobiles is fixed

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -14,8 +14,3 @@ html {
 .hidden {
   display:none
 }
-
-html, body {
-  max-width: 100%;
-  overflow-x: hidden;
-}
